--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "@babel/preset-env": "^7.22.6",
     "@babel/preset-react": "^7.22.5",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.1",
     "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "whatwg-fetch": "^3.6.2"
   }
